Home module -- Simplify template code.

--- a/Application/Home/View/Index/login.html
+++ b/Application/Home/View/Index/login.html
@@ -4,7 +4,7 @@
     <div class="container">
         <div class="breadcrumbs-main">
             <ol class="breadcrumb">
-                <li><a href="index.html">Home</a></li>
+                <li><a href="__CONTROLLER__/index.html">主页</a></li>
                 <li class="active">登陆页面</li>
             </ol>
         </div>
@@ -14,8 +14,6 @@
 <!--register-starts-->
 <div class="login">
     <div class="container">
-
-
         <div class="register-main">
             <div class="col-md-4">
 
@@ -39,18 +37,10 @@
             <div class="col-md-4">
 
             </div>
-
             <div class="clearfix"></div>
         </div>
-
         <br>
-
-
     </div>
 </div>
 <!--register-end-->
 <!--information-starts-->
-
-<!--footer-end-->
-</body>
-</html>
