--- a/Application/Home/View/Layout/layout.html
+++ b/Application/Home/View/Layout/layout.html
@@ -28,14 +28,14 @@
         </a>
     </div>
     <ul class="nav navbar-nav navbar-right">
-        <li><a class="navbar-link glyphicon glyphicon-user" href="register.html">&nbsp;注册</a></li>
-        <li><a class="navbar-link glyphicon glyphicon-log-in" href="login.html">&nbsp;登录&nbsp;</a></li>
+        <li><a class="navbar-link glyphicon glyphicon-user" href="__CONTROLLER__/register.html">&nbsp;注册</a></li>
+        <li><a class="navbar-link glyphicon glyphicon-log-in" href="__CONTROLLER__/login.html">&nbsp;登录&nbsp;</a></li>
     </ul>
 </div>
 
 <!--start-logo-->
 <div class="logo">
-    <a href="index.html"><img src="__PUBLIC__/images/233.jpg" style="height:110px; padding:0; margin:0;"></a>
+    <a href="__CONTROLLER__/index.html"><img src="__PUBLIC__/images/233.jpg" style="height:110px; padding:0; margin:0;"></a>
 </div>
 <!--start-logo-->
 <!--bottom-header-->
@@ -45,7 +45,7 @@
             <div class="col-md-10">
                 <div class="top-nav">
                     <ol class="nav nav-pills nav-justified">
-                        <li class="grid"><a href="index.html" style="color:#000;">主页</a></li>
+                        <li class="grid"><a href="__CONTROLLER__/index.html" style="color:#000;">主页</a></li>
                         <li class="grid"><a href="#" style="color:#000;">外国</a></li>
                         <li class="grid"><a href="#" style="color:#000;">科幻</a></li>
                         <li class="grid"><a href="#" style="color:#000;">侦探</a></li>
