--- a/Application/Home/View/Index/index.html
+++ b/Application/Home/View/Index/index.html
@@ -26,33 +26,18 @@
 <div class="about">
     <div class="container">
         <div class="about-top grid-1">
-            <div class="col-md-4 about-left">
-                <figure class="effect-bubba">
-                    <img class="img-responsive" src="__PUBLIC__/images/abt-1.jpg" alt=""/>
-                    <figcaption>
-                        <h2>金色梦乡</h2>
-                        <p>一部奇迹般的小说，带给人活下去的勇气、希望和信心！</p>
-                    </figcaption>
-                </figure>
-            </div>
-            <div class="col-md-4 about-left">
-                <figure class="effect-bubba">
-                    <img class="img-responsive" src="__PUBLIC__/images/abt-2.jpg" alt=""/>
-                    <figcaption>
-                        <h4>人间失格</h4>
-                        <p>太宰治灵魂深处无助的生命绝唱，同时也是村上春树绝望凄美的灵感源泉。</p>
-                    </figcaption>
-                </figure>
-            </div>
-            <div class="col-md-4 about-left">
-                <figure class="effect-bubba">
-                    <img class="img-responsive" src="__PUBLIC__/images/abt-3.jpg" alt=""/>
-                    <figcaption>
-                        <h4>忒休斯之船</h4>
-                        <p>颠覆阅读体验！挑战纸书可能性的极致冒险。亦作忒休斯之船。</p>
-                    </figcaption>
-                </figure>
-            </div>
+            <foreach name="top3" item="topItem">
+                <div class="col-md-4 about-left">
+                    <figure class="effect-bubba">
+                        <img class="img-responsive" src="{$topItem.gphoto}" alt="{$topItem.gname}"/>
+                        <figcaption>
+                            <h2>{$topItem.gname}</h2>
+                            <p>{$topItem.gdescription}</p>
+                            <p>￥{$topItem.gprice|default="0.00"}</p>
+                        </figcaption>
+                    </figure>
+                </div>
+            </foreach>
             <div class="clearfix"></div>
         </div>
     </div>
@@ -62,124 +47,25 @@
 <div class="product">
     <div class="container">
         <div class="product-top">
-            <div class="product-one">
-                <div class="col-md-3 product-left">
-                    <div class="product-main simpleCart_shelfItem">
-                        <a href="single.html" class="mask"><img class="img-responsive zoom-img"
-                                                                src="__PUBLIC__/images/p-1.png" alt=""/></a>
-                        <div class="product-bottom">
-                            <h3>中国异闻录</h3>
-                            <p>半价热售中</p>
-                            <h4><a class="item_add" href="#"><i></i></a> <span class=" item_price">$ 233</span></h4>
-                        </div>
-                        <div class="srch">
-                            <span>-50%</span>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-3 product-left">
-                    <div class="product-main simpleCart_shelfItem">
-                        <a href="single.html" class="mask"><img class="img-responsive zoom-img"
-                                                                src="__PUBLIC__/images/p-2.png" alt=""/></a>
-                        <div class="product-bottom">
-                            <h3>韩国异闻录</h3>
-                            <p>半价热售中</p>
-                            <h4><a class="item_add" href="#"><i></i></a> <span class=" item_price">$ 233</span></h4>
-                        </div>
-                        <div class="srch">
-                            <span>-50%</span>
+            <for start="0" end="$rowCount" name="row">
+                <div class="product-one">
+                    <for start="0" end="3">
+                        <div class="col-md-3 product-left">
+                            <div class="product-main simpleCart_shelfItem">
+                                <a href="single.html" class="mask"><img class="img-responsive zoom-img" width="350"
+                                                                        height="350"
+                                                                        src="{$list[$i+($row*3)]['gphoto']}"
+                                                                        alt="{$list[$i+($row*3)]['gname']}"/></a>
+                                <div class="product-bottom">
+                                    <h3>{$list[$i+($row*3)]['gname']}</h3>
+                                    <h4><a class="item_add" href="#"><i></i></a> <span class=" item_price">￥ {$list[$i+($row*3)]['gprice']|default="0.00"}</span>
+                                    </h4>
+                                </div>
                         </div>
                     </div>
+                    </for>
                 </div>
-                <div class="col-md-3 product-left">
-                    <div class="product-main simpleCart_shelfItem">
-                        <a href="single.html" class="mask"><img class="img-responsive zoom-img"
-                                                                src="__PUBLIC__/images/p-3.png" alt=""/></a>
-                        <div class="product-bottom">
-                            <h3>印度异闻录</h3>
-                            <p>半价热售中</p>
-                            <h4><a class="item_add" href="#"><i></i></a> <span class=" item_price">$ 233</span></h4>
-                        </div>
-                        <div class="srch">
-                            <span>-50%</span>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-3 product-left">
-                    <div class="product-main simpleCart_shelfItem">
-                        <a href="single.html" class="mask"><img class="img-responsive zoom-img"
-                                                                src="__PUBLIC__/images/p-4.png" alt=""/></a>
-                        <div class="product-bottom">
-                            <h3>日本异闻录</h3>
-                            <p>半价热售中</p>
-                            <h4><a class="item_add" href="#"><i></i></a> <span class=" item_price">$ 233</span></h4>
-                        </div>
-                        <div class="srch">
-                            <span>-50%</span>
-                        </div>
-                    </div>
-                </div>
-                <div class="clearfix"></div>
-            </div>
-            <div class="product-one">
-                <div class="col-md-3 product-left">
-                    <div class="product-main simpleCart_shelfItem">
-                        <a href="single.html" class="mask"><img class="img-responsive zoom-img"
-                                                                src="__PUBLIC__/images/p-5.png" alt=""/></a>
-                        <div class="product-bottom">
-                            <h3>泰国异闻录</h3>
-                            <p>半价热售中</p>
-                            <h4><a class="item_add" href="#"><i></i></a> <span class=" item_price">$ 233</span></h4>
-                        </div>
-                        <div class="srch">
-                            <span>-50%</span>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-3 product-left">
-                    <div class="product-main simpleCart_shelfItem">
-                        <a href="single.html" class="mask"><img class="img-responsive zoom-img"
-                                                                src="__PUBLIC__/images/p-6.png" alt=""/></a>
-                        <div class="product-bottom">
-                            <h3>十宗罪（一）</h3>
-                            <p>半价热售中</p>
-                            <h4><a class="item_add" href="#"><i></i></a> <span class=" item_price">$ 233</span></h4>
-                        </div>
-                        <div class="srch">
-                            <span>-50%</span>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-3 product-left">
-                    <div class="product-main simpleCart_shelfItem">
-                        <a href="single.html" class="mask"><img class="img-responsive zoom-img"
-                                                                src="__PUBLIC__/images/p-7.png" alt=""/></a>
-                        <div class="product-bottom">
-                            <h3>十宗罪（二）</h3>
-                            <p>半价热售中</p>
-                            <h4><a class="item_add" href="#"><i></i></a> <span class=" item_price">$ 233</span></h4>
-                        </div>
-                        <div class="srch">
-                            <span>-50%</span>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-3 product-left">
-                    <div class="product-main simpleCart_shelfItem">
-                        <a href="single.html" class="mask"><img class="img-responsive zoom-img"
-                                                                src="__PUBLIC__/images/p-8.png" alt=""/></a>
-                        <div class="product-bottom">
-                            <h3>十宗罪（三）</h3>
-                            <p>半价热售中</p>
-                            <h4><a class="item_add" href="#"><i></i></a> <span class=" item_price">$ 233</span></h4>
-                        </div>
-                        <div class="srch">
-                            <span>-50%</span>
-                        </div>
-                    </div>
-                </div>
-                <div class="clearfix"></div>
-            </div>
+            </for>
         </div>
     </div>
 </div>
