--- a/Public/css/homeStyle.css
+++ b/Public/css/homeStyle.css
@@ -2581,7 +2581,8 @@ h3.ghj {
     }
 
     .about-left {
-        width: 33.3%;
+        max-width: 33.3%;
+        max-height: 33.3%;
         float: left;
         padding: 0 10px;
     }
