Home module -- fix register link in login page.

--- a/Application/Home/View/Index/login.html
+++ b/Application/Home/View/Index/login.html
@@ -30,7 +30,7 @@
 
                     <div class="address submit ">
                         <input type="submit" value="确认登陆">&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
-                        &nbsp; &nbsp; <a href="#" style="color:#FFF;">还没账号？点击注册-></a>
+                        &nbsp; &nbsp; <a href="__CONTROLLER__/register.html" style="color:#FFF;">还没账号？点击注册-></a>
                     </div>
                 </center>
             </div>
