--- a/Application/Home/View/Layout/layout.html
+++ b/Application/Home/View/Layout/layout.html
@@ -22,7 +22,7 @@
     <div class="navbar-header">
         <a class="navbar-brand" href="javascript:void(0)">
             <strong>
-                首页
+                迷之魔法书店
             </strong>
         </a>
     </div>
