Home goods detail page -- fix top3 goods size bug.

--- a/Application/Home/View/Index/single.html
+++ b/Application/Home/View/Index/single.html
@@ -101,7 +101,7 @@
                                 <div class="product-main simpleCart_shelfItem">
                                     <a href="__CONTROLLER__/single.html?goodsID={$topItem['gid']}" class="mask"><img
                                             class="img-responsive zoom-img" src="{$topItem.gphoto}"
-                                            alt="{$topItem.gname}"/></a>
+                                            alt="{$topItem.gname}" width="350" height="350"/></a>
                                     <div class="product-bottom">
                                         <h3>{$topItem.gname}</h3>
                                         <p>近期热卖</p>
