--- a/Application/Home/View/Layout/layout.html
+++ b/Application/Home/View/Layout/layout.html
@@ -20,7 +20,7 @@
 <!--top-header-->
 <div class="navbar navbar-inverse" style=" padding-bottom:0px;">
     <div class="navbar-header">
-        <a class="navbar-brand" href="javascript:void(0)">
+        <a class="navbar-brand" href="__CONTROLLER__/index">
             <strong>
                 迷之魔法书店
             </strong>
