Home module -- fix bug in register page.

--- a/Application/Home/View/Layout/layout.html
+++ b/Application/Home/View/Layout/layout.html
@@ -28,7 +28,7 @@
     </div>
     <ul class="nav navbar-nav navbar-right">
         <notpresent name="Think.session.user">
-            <notpresent name="isLoginPage">
+            <notpresent name="isAccountPage">
                 <li><a class="navbar-link glyphicon glyphicon-user" href="__CONTROLLER__/register.html">&nbsp;注册</a>
                 </li>
                 <li><a class="navbar-link glyphicon glyphicon-log-in" href="#" data-toggle="modal"
